36-suites-for-study/suite-25/hivesolutions-appier-78435320.failed.log
travis_fold:start:system_info[0K[33;1mBuild system information[0m
Build language: python
Build id: ''
Job id: ''
[34m[1mBuild image provisioning date and time[0m
Thu Feb  5 15:09:33 UTC 2015
[34m[1mOperating System Details[0m
Distributor ID:	Ubuntu
Description:	Ubuntu 12.04.5 LTS
Release:	12.04
Codename:	precise
[34m[1mLinux Version[0m
3.13.0-29-generic
[34m[1mCookbooks Version[0m
a68419e https://github.com/travis-ci/travis-cookbooks/tree/a68419e
[34m[1mGCC version[0m
gcc (Ubuntu/Linaro 4.6.3-1ubuntu5) 4.6.3
Copyright (C) 2011 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

[34m[1mLLVM version[0m
clang version 3.4 (tags/RELEASE_34/final)
Target: x86_64-unknown-linux-gnu
Thread model: posix
[34m[1mPre-installed Ruby versions[0m
ruby-1.9.3-p551
[34m[1mPre-installed Node.js versions[0m
v0.10.36
[34m[1mPre-installed Go versions[0m
1.4.1
[34m[1mRedis version[0m
redis-server 2.8.19
[34m[1mriak version[0m
2.0.2
[34m[1mMongoDB version[0m
MongoDB 2.4.12
[34m[1mCouchDB version[0m
couchdb 1.6.1
[34m[1mNeo4j version[0m
1.9.4
[34m[1mRabbitMQ Version[0m
3.4.3
[34m[1mElasticSearch version[0m
1.4.0
[34m[1mInstalled Sphinx versions[0m
2.0.10
2.1.9
2.2.6
[34m[1mDefault Sphinx version[0m
2.2.6
[34m[1mInstalled Firefox version[0m
firefox 31.0esr
[34m[1mPhantomJS version[0m
1.9.8
[34m[1mant -version[0m
Apache Ant(TM) version 1.8.2 compiled on December 3 2011
[34m[1mmvn -version[0m
Apache Maven 3.2.5 (12a6b3acb947671f09b81f49094c53f426d8cea1; 2014-12-14T17:29:23+00:00)
Maven home: /usr/local/maven
Java version: 1.7.0_76, vendor: Oracle Corporation
Java home: /usr/lib/jvm/java-7-oracle/jre
Default locale: en_US, platform encoding: ANSI_X3.4-1968
OS name: "linux", version: "3.13.0-29-generic", arch: "amd64", family: "unix"
travis_fold:end:system_info[0K
grep: /etc/apt/sources.list.d/*: No such file or directory
sed: cannot rename /etc/hosts: Device or resource busy
sed: cannot rename /etc/hosts: Device or resource busy
[33;1m3.5-dev is not installed; attempting download[0m
[33;1mDownloading archive: https://s3.amazonaws.com/travis-python-archives/binaries/ubuntu/12.04/x86_64/python-3.5-dev.tar.bz2[0m
$ sudo tar xjf python-3.5-dev.tar.bz2 --directory /
$ cd failed/hivesolutions/appier
travis_time:start:1314f8de[0K$ source ~/virtualenv/python3.5-dev/bin/activate

travis_time:end:1314f8de:start=1608144205009388500,finish=1608144205020102558,duration=10714058[0K$ python --version
Python 3.5.5+
$ pip --version
pip 10.0.1 from /home/travis/virtualenv/python3.5-dev/lib/python3.5/site-packages/pip (python 3.5)
travis_fold:start:install.1[0Ktravis_time:start:147c2baa[0K$ pip install -r requirements.txt

travis_time:end:147c2baa:start=1608144205550658358,finish=1608144206473906643,duration=923248285[0Ktravis_fold:end:install.1[0Ktravis_fold:start:install.2[0Ktravis_time:start:315a47e1[0K$ pip install coveralls==1.0b1
Collecting coveralls==1.0b1
  Downloading https://files.pythonhosted.org/packages/e5/92/11409fb634e966c7262587b5ee7d8ba727c1b1136e087fef649624177cf6/coveralls-1.0b1-py2.py3-none-any.whl
Collecting requests>=1.0.0 (from coveralls==1.0b1)
  Downloading https://files.pythonhosted.org/packages/39/fc/f91eac5a39a65f75a7adb58eac7fa78871ea9872283fb9c44e6545998134/requests-2.25.0-py2.py3-none-any.whl (61kB)
Collecting docopt>=0.6.1 (from coveralls==1.0b1)
  Downloading https://files.pythonhosted.org/packages/a2/55/8f8cab2afd404cf578136ef2cc5dfb50baa1761b68c9da1fb1e4eed343c9/docopt-0.6.2.tar.gz
Collecting coverage>=3.6 (from coveralls==1.0b1)
  Downloading https://files.pythonhosted.org/packages/35/58/e38636e8233b49982efca6a69c9974f2575439f637dc3b0e8ac0e77c550c/coverage-5.3-cp35-cp35m-manylinux1_x86_64.whl (229kB)
Collecting certifi>=2017.4.17 (from requests>=1.0.0->coveralls==1.0b1)
  Downloading https://files.pythonhosted.org/packages/5e/a0/5f06e1e1d463903cf0c0eebeb751791119ed7a4b3737fdc9a77f1cdfb51f/certifi-2020.12.5-py2.py3-none-any.whl (147kB)
Collecting urllib3<1.27,>=1.21.1 (from requests>=1.0.0->coveralls==1.0b1)
  Downloading https://files.pythonhosted.org/packages/f5/71/45d36a8df68f3ebb098d6861b2c017f3d094538c0fb98fa61d4dc43e69b9/urllib3-1.26.2-py2.py3-none-any.whl (136kB)
Collecting idna<3,>=2.5 (from requests>=1.0.0->coveralls==1.0b1)
  Downloading https://files.pythonhosted.org/packages/a2/38/928ddce2273eaa564f6f50de919327bf3a00f091b5baba8dfa9460f3a8a8/idna-2.10-py2.py3-none-any.whl (58kB)
Collecting chardet<4,>=3.0.2 (from requests>=1.0.0->coveralls==1.0b1)
  Downloading https://files.pythonhosted.org/packages/bc/a9/01ffebfb562e4274b6487b4bb1ddec7ca55ec7510b22e4c51f14098443b8/chardet-3.0.4-py2.py3-none-any.whl (133kB)
Building wheels for collected packages: docopt
  Running setup.py bdist_wheel for docopt: started
  Running setup.py bdist_wheel for docopt: finished with status 'done'
  Stored in directory: /home/travis/.cache/pip/wheels/9b/04/dd/7daf4150b6d9b12949298737de9431a324d4b797ffd63f526e
Successfully built docopt
Installing collected packages: certifi, urllib3, idna, chardet, requests, docopt, coverage, coveralls
Successfully installed certifi-2020.12.5 chardet-3.0.4 coverage-5.3 coveralls-1.0b1 docopt-0.6.2 idna-2.10 requests-2.25.0 urllib3-1.26.2

travis_time:end:315a47e1:start=1608144206485923987,finish=1608144210132733544,duration=3646809557[0Ktravis_fold:end:install.2[0Ktravis_fold:start:install.3[0Ktravis_time:start:2491b440[0K$ pip install twine==1.5.0
Collecting twine==1.5.0
  Downloading https://files.pythonhosted.org/packages/b6/57/a4148d05bd0098c1d6d8cc4e14e766dbe93c3a5ab6723b969da27a87bac0/twine-1.5.0-py2.py3-none-any.whl
Requirement already satisfied: requests in /home/travis/virtualenv/python3.5-dev/lib/python3.5/site-packages (from twine==1.5.0) (2.25.0)
Collecting pkginfo (from twine==1.5.0)
  Downloading https://files.pythonhosted.org/packages/4f/3c/535287349af1b117e082f8e77feca52fbe2fdf61ef1e6da6bcc2a72a3a79/pkginfo-1.6.1-py2.py3-none-any.whl
Requirement already satisfied: urllib3<1.27,>=1.21.1 in /home/travis/virtualenv/python3.5-dev/lib/python3.5/site-packages (from requests->twine==1.5.0) (1.26.2)
Requirement already satisfied: idna<3,>=2.5 in /home/travis/virtualenv/python3.5-dev/lib/python3.5/site-packages (from requests->twine==1.5.0) (2.10)
Requirement already satisfied: chardet<4,>=3.0.2 in /home/travis/virtualenv/python3.5-dev/lib/python3.5/site-packages (from requests->twine==1.5.0) (3.0.4)
Requirement already satisfied: certifi>=2017.4.17 in /home/travis/virtualenv/python3.5-dev/lib/python3.5/site-packages (from requests->twine==1.5.0) (2020.12.5)
Installing collected packages: pkginfo, twine
Successfully installed pkginfo-1.6.1 twine-1.5.0

travis_time:end:2491b440:start=1608144210143360360,finish=1608144211399786791,duration=1256426431[0Ktravis_fold:end:install.3[0Ktravis_time:start:0963c0a5[0K$ coverage run --source=appier setup.py test
running test
running egg_info
creating src/appier.egg-info
writing src/appier.egg-info/PKG-INFO
writing dependency_links to src/appier.egg-info/dependency_links.txt
writing top-level names to src/appier.egg-info/top_level.txt
writing manifest file 'src/appier.egg-info/SOURCES.txt'
reading manifest file 'src/appier.egg-info/SOURCES.txt'
reading manifest template 'MANIFEST.in'
writing manifest file 'src/appier.egg-info/SOURCES.txt'
running build_ext
Traceback (most recent call last):
  File "setup.py", line 80, in <module>
    "Programming Language :: Python :: 3.4"
  File "/home/travis/virtualenv/python3.5-dev/lib/python3.5/site-packages/setuptools/__init__.py", line 129, in setup
    return distutils.core.setup(**attrs)
  File "/opt/python/3.5-dev/lib/python3.5/distutils/core.py", line 148, in setup
    dist.run_commands()
  File "/opt/python/3.5-dev/lib/python3.5/distutils/dist.py", line 955, in run_commands
    self.run_command(cmd)
  File "/opt/python/3.5-dev/lib/python3.5/distutils/dist.py", line 974, in run_command
    cmd_obj.run()
  File "/home/travis/virtualenv/python3.5-dev/lib/python3.5/site-packages/setuptools/command/test.py", line 226, in run
    self.run_tests()
  File "/home/travis/virtualenv/python3.5-dev/lib/python3.5/site-packages/setuptools/command/test.py", line 248, in run_tests
    exit=False,
  File "/opt/python/3.5-dev/lib/python3.5/unittest/main.py", line 94, in __init__
    self.parseArgs(argv)
  File "/opt/python/3.5-dev/lib/python3.5/unittest/main.py", line 141, in parseArgs
    self.createTests()
  File "/opt/python/3.5-dev/lib/python3.5/unittest/main.py", line 148, in createTests
    self.module)
  File "/opt/python/3.5-dev/lib/python3.5/unittest/loader.py", line 219, in loadTestsFromNames
    suites = [self.loadTestsFromName(name, module) for name in names]
  File "/opt/python/3.5-dev/lib/python3.5/unittest/loader.py", line 219, in <listcomp>
    suites = [self.loadTestsFromName(name, module) for name in names]
  File "/opt/python/3.5-dev/lib/python3.5/unittest/loader.py", line 153, in loadTestsFromName
    module = __import__(module_name)
  File "/home/travis/build/failed/hivesolutions/appier/src/appier/__init__.py", line 37, in <module>
    from . import api
  File "/home/travis/build/failed/hivesolutions/appier/src/appier/api.py", line 47, in <module>
    from . import base
  File "/home/travis/build/failed/hivesolutions/appier/src/appier/base.py", line 626
    print self._user_routes
             ^
SyntaxError: Missing parentheses in call to 'print'

travis_time:end:0963c0a5:start=1608144211410837431,finish=1608144212260038705,duration=849201274[0K
[31;1mThe command "coverage run --source=appier setup.py test" exited with 1.[0m

Done. Your build exited with 1.
